--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">mobileProgProject</string>
+    <string name="detail_text_description">Ecran Detail</string>
+    <string name="ecran_detail">Ecran Detail</string>
 </resources>
